--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Lnmiit_online_voting_system">
+    <wb-module deploy-name="test">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="Lnmiit_online_voting_system"/>
-        <property name="java-output-path" value="/Lnmiit_online_voting_system/build/classes"/>
+        <property name="context-root" value="test"/>
+        <property name="java-output-path" value="/test/build/classes"/>
     </wb-module>
 </project-modules>
